# katago-analysis

./: .env.example  Cargo.toml  README.md  test_analysis.cfg
src/: analyzer.rs  config.rs  lib.rs  request.rs  result.rs  rules.rs
src/engine/: mod.rs  request.rs  response.rs
tests/: analyzer.rs  engine.rs  launch.rs  warnings.rs
