[package]
name = "katago-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-core = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["io-util", "process"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }

[dev-dependencies]
assert_matches = "1.5.0"
dotenv = "0.15.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
