[package]
name = "katago-analysis"
version = "0.1.0"
edition = "2024"
description = "A wrapper around KataGo's analysis engine."
documentation = "https://docs.rs/katago-analysis"
repository = "https://github.com/kendfrey/katago-analysis"
license = "MIT"
keywords = ["katago", "go", "baduk", "weiqi"]
categories = ["api-bindings"]

[dependencies]
futures-core = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["io-util", "process", "rt"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }

[dev-dependencies]
assert_matches = "1.5.0"
dotenv = "0.15.0"
libtest-mimic = "0.8.2"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "analyzer"
harness = false
